fix(Nav): fix position of arrow down on ie in explore dropdown

--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -9,6 +9,13 @@
     .ti-angle-down {
       float: right;
     }
+    a {
+      @extend .clearfix;
+      > span, > i {
+        display: inline-block;
+        float: left;
+      }
+    }
   }
   span.ti-angle-down { font-weight: 900; font-size: 1.5em; position: relative; top: 1px; }
   .navbar-toggle {  padding: 0; margin: 0 10px 0 20px; }
